<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".View.MainActivity">

    <include layout="@layout/content_main" />

    <!-- Dimming overlay -->

    <View
        android:id="@+id/dimmingView"
        android:layout_width="match_parent"
        android:layout_height="1073dp"
        android:background="#80000000"
        android:visibility="gone"
        tools:visibility="gone" />

    <!-- Floating Action Button -->

    <!-- Additional Button 1 -->

    <!-- Additional Button 2 -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:rotationX="-8"
        app:elevation="15dp"
        app:rippleColor="#9E0F0F"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="90dp"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPastPolls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="160dp"
        android:visibility="gone"
        app:srcCompat="@android:drawable/ic_dialog_dialer" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="376dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:text="       Discovered Polls"
            android:textSize="20sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewPolls"
        android:layout_width="318dp"
        android:layout_height="207dp"
        android:layout_gravity="center"
        android:background="#2D523C61"
        android:clipChildren="true"
        android:clipToPadding="true"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>