<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        app:srcCompat="@drawable/_6e2689bbd596e1c543411073db311b9_2621791768" />

    <EditText
        android:id="@+id/pollTitle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/pollTitle"
        android:inputType="text" />

    <EditText
        android:id="@+id/PollOption"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/PollOption"
        android:inputType="text" />
    <EditText
        android:id="@+id/PollOption2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/PollOption"
        android:inputType="text" />

    <EditText
        android:id="@+id/PollOption3"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/PollOption"
        android:inputType="text"
        tools:visibility="gone" />
</LinearLayout>